# waterfall

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CODEOWNERS  Makefile  README.md  main.c  vcpkg.json
Application/: Application.h  BindGroupLayoutEntry.h  Camera.h  Compute.h  Depth.h  DepthStencilState.h  Lightning.h  Model.h  Queues.h  RenderPass.h  SSocket.h  adapter.c  adapter.h  device.c  device.h  gui.h
Application/RenderTarget/: BBindGroup.h  BBindGroupLayout.h  BindGroup.h  BindGroupLayout.h  BindGroupLayoutEntry.h  Bindgroups.h  DepthStencilState.h  Fourareen.h  Mammoth.h  Model.h  PPipeline.h  Pipeline.h  Player.h  RenderTarget.h  TTexture.h  Texture.h
Application/Uniform/: Uniform.h
Application/gui/: Chat.h  Messages.h  SSocket.h  Socket.h  color.h  debug.h  gui.h
resources/lightning/: control.wgsl  specularity.wgsl
resources/player/: player.wgsl
worker/: Environment.ts  Realm.ts  index.ts  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/Message/: Message.h  index.ts
worker/common/: common.ts
worker/common/DurableObject/: Client.ts  Namespace.ts  index.ts
